2015-06-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditor.m
	Enable parsing of obj-c++

2015-06-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/Resources/Info.table
	Enable Obj-C++ extension.

	* Framework/PCEditorManager.m
	Use the internal editor if it is available, even if no parser is available.

	* Modules/Editors/ProjectCenter/PCEditor.m
	Handle missing image better.

2015-04-07 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Use constants and not strings as keys.

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	Use console font for the view.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Use Preferences color methods.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Headers/Protocols/Preferences.h
	* PCPrefController.m
	Direct preferences method for setting and getting colors.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Convert CMYK to RGB before serializing.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditor.m
	Actually use the background color preference.

2015-03-22 Riccardo Mottola <rm@gnu.org>

	* Headers/Protocols/Preferences.h
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	* PCPrefController.m
	Move colorFromString from PCEditorFSCPrefs to PCPrefsController and make it thus generally available.

2015-03-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Projects/Framework/PCFrameworkProject.m
	Generate the PACKAGE_NAME for Frameworks.

2015-03-11 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	Bug Fix: Set the font manager with the picked font, not always the same.

2015-03-11 Riccardo Mottola <rm@gnu.org>

	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.h
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	* Modules/Preferences/EditorFSC/Resources/EditorFSCPrefs.gorm